Traffic-Management-Basics/ms-demo/02-demoapp-subset/deploy-demoapp-canary.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp
    version: v2.1-canary
  name: demoapp-canary
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  selector:
    matchLabels:
      app: demoapp
      version: v2.1-canary
  template:
    metadata:
      labels:
        app: demoapp
        version: v2.1-canary
    spec:
      containers:
      - image: ikubernetes/demoapp:v2.1
        imagePullPolicy: IfNotPresent
        name: demoapp
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        resources:
          limits:
            cpu: 50m
---
