Traffic-Management-Basics/ms-demo/02-demoapp-subset/destinationrule-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: demoapp
spec:
  host: demoapp
  subsets:
  - name: v2
    labels:
      version: v2.1
  - name: v2-canary
    labels:
      version: v2.1-canary
