Traffic-Management-Basics/ms-demo/02-demoapp-subset/virtualservice-demoapp.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demoapp
spec:
  hosts:
  - demoapp
  http:
  - name: weight-based-routing
    route:
    - destination:
        host: demoapp
        subset: v2
      weight: 90
    - destination:
        host: demoapp
        subset: v2-canary
      weight: 10
